# dialog_generator

./: .gitignore  .~lock.health.csv#  Cargo.toml  CommandLineHelp.md  README.md  build.rs  health_cpy.rs
c/: health.c  main.c  vector.c  vector.h
dialog_lib/: Cargo.toml
dialog_lib/src/query/: mod.rs
generate/: Cargo.toml
generate/src/: builder.rs  csv.rs  lib.rs
src/: build_query.rs  csv.rs  dialog_test.rs  gen_c.rs  health.rs  health_test.rs  main.rs  radix_array.rs  struct_builder.rs  test_dialog_test.rs  utils.rs
src/dialog_test/: mod.rs  mod_000.rs  mod_001.rs  mod_002.rs  mod_003.rs  mod_004.rs  mod_005.rs  mod_006.rs  mod_007.rs  mod_008.rs  mod_009.rs  mod_010.rs  mod_011.rs  mod_012.rs  mod_013.rs  mod_014.rs  mod_015.rs  mod_016.rs  mod_017.rs  mod_018.rs  mod_019.rs  mod_020.rs  mod_021.rs  mod_022.rs  mod_023.rs  mod_024.rs  mod_025.rs  mod_026.rs  mod_027.rs  mod_028.rs  mod_029.rs  mod_030.rs  mod_031.rs  mod_032.rs  mod_033.rs  mod_034.rs  mod_035.rs  mod_036.rs  mod_037.rs  mod_038.rs  (+62 more)
utils/src/: lib.rs  radix_array.rs
