[package]
name = "dialog"
version = "0.1.0"
edition = "2024"
build = "./build.rs"

[workspace]
members = [
 "utils",
 "generate",
 "dialog_lib"
]

[dependencies]
utils = { path = "./utils/" }
generate = { path = "./generate/" }
dialog_lib = { path = "./dialog_lib/" }
clap = { version = "4.5.42", features = ["derive"] }
rayon = "1.10.0"
clap-markdown = "0.1.5"
